feat: add table map, recommendations, and improved reservation flow
- Implemented TableMap component with dynamic table rendering
- Added useTables and useRecommendations hooks for backend integration
- Updated App.jsx to support date/time selection, table selection, and recommendations
- Added enhanced RecommendationService with scoring logic
- Fixed ReservationForm hook imports (useEffect)
- Added RestaurantFloor and RestaurantFloorMap integration
- Updated backend DTOs, services, and controllers for full frontend compatibility
- Improved reservation status endpoint and table merging logic
- Added admin and user reservation list components